--- a/.github/workflows/post-merge-go-dazl.yaml
+++ b/.github/workflows/post-merge-go-dazl.yaml
@@ -11,9 +11,26 @@ on:
       - release-*
   workflow_dispatch:
 
+permissions:
+  contents: read
+  actions: read
+  attestations: read
+  checks: read
+  deployments: read
+  discussions: read
+  issues: read
+  models: read
+  packages: read
+  pages: read
+  pull-requests: read
+  repository-projects: read
+  statuses: read
+  security-events: write
+  id-token: write
+
 jobs:
   post-merge-pipeline:
-    uses: open-edge-platform/orch-ci/.github/workflows/post-merge.yml@main
+    uses: open-edge-platform/orch-ci/.github/workflows/post-merge.yml@4c94cdd01e58beab5f822f1eeb0439a523018a55 # v0.1.5
     with:
       run_version_check: true
       run_dep_version_check: false
