--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -11,18 +11,23 @@ on:
       - release-*
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   pre-checks:
     runs-on: ${{ github.repository_owner == 'intel' && 'intel-ubuntu-latest' || 'ubuntu-latest' }}
     outputs:
       filtered_projects: ${{ steps.filter-changes.outputs.filtered_projects }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
+        with:
+          persist-credentials: false
       - name: "Verify Branch Name"
-        uses: open-edge-platform/orch-ci/verify-branch-name@main
+        uses: open-edge-platform/orch-ci/verify-branch-name@4c94cdd01e58beab5f822f1eeb0439a523018a55 # v0.1.5
       - name: "Discover Changed Subfolders"
         id: discover-changes
-        uses: open-edge-platform/orch-ci/discover-changed-subfolders@main
+        uses: open-edge-platform/orch-ci/discover-changed-subfolders@4c94cdd01e58beab5f822f1eeb0439a523018a55 # v0.1.5
       - name: "Filter Out Unwanted Changed Subfolders"
         id: filter-changes
         run: |
@@ -38,7 +43,7 @@ jobs:
       fail-fast: false
       matrix:
         project_folder: ${{ fromJson(needs.pre-checks.outputs.filtered_projects) }}
-    uses: open-edge-platform/orch-ci/.github/workflows/pre-merge.yml@main
+    uses: open-edge-platform/orch-ci/.github/workflows/pre-merge.yml@4c94cdd01e58beab5f822f1eeb0439a523018a55 # v0.1.5
     with:
       bootstrap_tools: "go,gotools,golang-lint,nodejs"
       run_version_check: true
