measurement metrics package

--- a/go/Makefile
+++ b/go/Makefile
@@ -17,7 +17,8 @@ all: generate build lint test
 
 # GO variables
 GOARCH	:= $(shell go env GOARCH)
-GOCMD   := GOPRIVATE="github.com/open-edge-platform/*" go
+#GOCMD   := GOPRIVATE="github.com/open-edge-platform/*" go
+GOCMD   := go
 
 
 go-tidy: ## Run go mod tidy
