chore: solve zizmore findings

--- a/.github/workflows/post-merge-go-dazl-zap.yaml
+++ b/.github/workflows/post-merge-go-dazl-zap.yaml
@@ -43,4 +43,5 @@ jobs:
       run_artifact: false
       prefix_tag_separator: "/"
       project_folder: "go/dazl/zap"
-    secrets: inherit
+    secrets:  # zizmor: ignore[secrets-inherit]
+      inherit
